--- a/Final_report.Rmd
+++ b/Final_report.Rmd
@@ -168,6 +168,9 @@ team_stats1$X23 <- NULL
 team_stats1$X24 <- NULL
 team_stats1$X25 <- NULL
 team_stats1 <- clean_names(team_stats1) 
+# extract the varables that are not team based and can be calculated on an individual player basis
+team_stats1 <- team_stats1 %>% 
+  select(team, f_tr, x3p_ar, ts_percent, e_fg_percent, ft_fga)
 
 # read in and clean names
 team_stats2 <- read_csv("data/raw/2018-19_nba_team-statistics_2.csv")
@@ -236,9 +239,10 @@ tm_stats <- tm_stats %>%
             pf = pf/g,
             pts = pts/g)
 
-# variables removed as they are a potentially a result of the points scored and not an indicator for them
+# variables removed as they will not add to predicting points scored
 tm_stats <- tm_stats %>% 
-  select(!c(g, rk_x, rk_y, team_id, w, l, pw, pl))
+  select(!c(g, rk, team, team_id, salary))
+
   
 ggplot(tm_stats, aes(pts)) +
   geom_histogram(colour = '#048BA8', fill = '#16DB93', alpha = 0.8, binwidth = 2) 
@@ -260,7 +264,16 @@ tm_stats %>%
 
 # remove low correlations between -0.2 and 0.2
 tm_stats <- tm_stats %>% 
-  select(!c("x2pa", "drb_percent", "mp", "tov", "salary", "pf", "tov_percent", "ft_percent", "stl", "f_tr", "orb", "team"))
+  select(!c(x2pa, mp, tov, pf, ft_percent, stl, orb))
+
+# Remove obvious variables that impact each other
+GGally::ggcorr(tm_stats, method = c('pairwise','spearman'), 
+               size = 2 )
+
+tm_stats <- tm_stats %>% 
+  select(!c(e_fg_percent, ft_fga, fg, x3p, x3p_ar, ft, fta, drb, fg_percent, x2p_percent, x3p_percent))
+
+  
 ```
 Data modelling and results
 This section may include but is not limited to:
@@ -271,12 +284,10 @@ This section may include but is not limited to:
 # Model
 fit <- lm(pts ~ ., tm_stats)
 tidy(fit, conf.int = T)
+summary(fit)
 
 # Linearity
 car::avPlots(fit)
-
-tm_stats <- tm_stats %>% 
-  select(!c("x3p_percent", "fta", "fg_percent", "fga", "x2p", "blk", "age", "x3p_ar", "orb_percent", "drb", "trb"))
 
 # multicolinety
 cor_mat <- tm_stats %>% 
@@ -286,21 +297,9 @@ cor_mat <- tm_stats %>%
 # select the variables that display multicolinearty above 0.8
 cor_features <- caret::findCorrelation(cor_mat, cutoff = 0.8, names = T, exact = FALSE)
 
-# removing the variables that contain evidence of multicolinearty
-tm_stats <- tm_stats %>% 
-  select(-cor_features)
-
-GGally::ggcorr(tm_stats, method = c('pairwise','spearman'), 
-               size = 2 )
-
-fit <- lm(pts ~ ., tm_stats)
-
 # Variance Inflation Factor
 car::vif(fit)
 sqrt(car::vif(fit))
-
-tm_stats <- tm_stats %>% 
-  select(!c(srs, o_rtg, d_rtg, pace, fg))
 
 fit <- lm(pts ~ ., tm_stats)
 tidy(fit, conf.int = T)
@@ -319,21 +318,59 @@ min_per_game <- team_mins %>%
 
 player_stats <- read_csv("data/processed/cleaned_player-stats.csv")
 
-player_stats %>% 
+players <- player_stats %>% 
   group_by(player_name) %>% 
   summarise(G = sum(mp)/ min_per_game,
-            x3pa_per_game = sum(x3pa)/G)
+            f_tr = (fta/fga),
+            ts_percent = pts / ((.44*fta + fga)*2),
+            fga = sum(fga)/G,
+            x3pa = sum(x3pa)/G,
+            x2p = sum(x2p)/G,
+            trb = sum(trb)/G,
+            ast = sum(ast)/G,
+            blk = sum(blk)/G,
+            MP = sum(mp)) %>% 
+  select(-G) 
 ```
+
+```{r}
+player_stats <-  player_stats %>% 
+  select(player_name, age, Pos, Tm, mp)
+
+player_salary <- read_csv("data/raw/2018-19_nba_player-salaries.csv")
+
+player_stats <- left_join(player_stats, player_salary)
+
+players <- mutate(players, exp_pts = predict(fit, newdata = players))
+
+players <- players %>% 
+  select(player_name, exp_pts)
+
+player_stats <- left_join(player_stats, players)
+
+player_stats %>% 
+  select(player_name, age, mp, Pos, salary, exp_pts) %>% 
+  filter(mp > 300) %>% 
+  arrange(-exp_pts)
+
+
+```
+
 Summary 
 Provide a brief summary which describes the key points and findings from your project. It will also be important to acknowledge any limitations of your model and overall approach to answering the question asked of you by the general manager.
 ```{r}
-player_stats[player_stats$player_name == "Aaron Gordon" | player_stats$player_name == "Aaron Holiday", c("player_name", "mp", "x3pa")] 
 
+30570000 + 3314365 + 7839435 + 8641000 + 23114066
+
+# Harden, Booker, Karl - Anthony Towns, Julius Randle, Kyrie Irving
 ```
 Reference List
 Provide a reference list of any sources you used in the development of your report and justification of your arguments. Please use the Vancouver reference style (Links to an external site.) for the reference list and in-text references. 
 ```{r}
+r_hat <- predict(fit)
 
+ggplot(NULL, aes(tm_stats$pts, r_hat)) +
+  geom_point()
 ```
 
  
