--- a/Final_report.Rmd
+++ b/Final_report.Rmd
@@ -16,193 +16,22 @@ Introduction
 - description of the scenario
 - the aim of the project
 - justification and importance
-```{r}
 
-```
 Reading and cleaning the raw data
 This section should document the process used to read and clean the raw data. It should also include a description of the data sets used and variables in each. For brevity, you could provide a link to the specific variable descriptions, rather than writing these out in full within your report. 
 [Data Descriptions](https://github.com/RobertRiddell/Final-Project_10157/tree/main/data-descriptions)
 
 [Calcualte Effectiev Field Goal] (https://www.basketball-reference.com/about/glossary.html#:~:text=eFG%25%20%2D%20Effective%20Field%20Goal%20Percentage,a%202%2Dpoint%20field%20goal.)
 ```{r Player Stats}
-player_stats <- read_csv("data/raw/2018-19_nba_player-statistics.csv")
-str(player_stats)
-
-# clean names to remove % and when a number is the column name
-player_stats <- clean_names(player_stats)
-
-# view which  players are duplicated and if they ahev a different age recorded
-player_stats %>% 
-  group_by(player_name, age) %>% 
-  count() %>% 
-  filter(n >1) %>% 
-  pull %>%  
-  length()
-
-# some players have multiple positions listed so a primary position based on which one 
-## they have played the most games on needs to be attributed
-player_stats[player_stats$player_name == "Thon Maker",c("player_name", "Pos")]
-
-# create a table that conatins how many games each player has played at each position
-position_game <- player_stats %>% 
-  group_by(player_name) %>% 
-  summarise(PG = if_else(pos == "PG", g, 0),
-            SG = if_else(pos == "SG", g, 0),
-            SF = if_else(pos == "SF", g, 0),
-            PF = if_else(pos == "PF", g, 0),
-            C = if_else(pos == "C", g, 0)) 
-# Attain the total number of games played at each position
-position_names <- c("PG", "SG", "SF", "PF", "C")
-position_game <- position_game %>% 
-  group_by(player_name) %>%
-  summarize_at(position_names, sum) %>%
-  ungroup()
-
-# return the column index of teh position the player has teh max games
-pos <- position_game %>% 
-  select(position_names) %>% 
-  apply(., 1, which.max)
-
-# match the position and player name
-player_pos <- tibble(player_name = position_game$player_name, Pos = position_names[pos]) 
-
-# unselect the old poistion and right join the new position value
-player_stats <- player_stats %>% 
-  select(!pos) %>% 
-  right_join(player_pos, by = "player_name") 
-
-# double check the position names have been updated
-player_stats[player_stats$player_name == "Thon Maker",c("player_name", "Pos")]
-
-# perform the same process for players that played on multiple teams
-team_game <- player_stats %>% 
-  group_by(player_name) %>% 
-  summarise(OKC = if_else(tm == "OKC", g, 0),
-            PHO = if_else(tm == "PHO", g, 0),
-            ATL = if_else(tm == "ATL", g, 0),
-            MIA = if_else(tm == "MIA", g, 0),
-            CLE = if_else(tm == "CLE", g, 0), 
-            DEN = if_else(tm == "DEN", g, 0),
-            SAS = if_else(tm == "SAS", g, 0),
-            CHI = if_else(tm == "CHI", g, 0),
-            UTA = if_else(tm == "UTA", g, 0),
-            BRK = if_else(tm == "BRK", g, 0),
-            NYK = if_else(tm == "NYK", g, 0),
-            POR = if_else(tm == "POR", g, 0),
-            MEM = if_else(tm == "MEM", g, 0),
-            TOT = if_else(tm == "TOT", g, 0),
-            IND = if_else(tm == "IND", g, 0),
-            MIL = if_else(tm == "MIL", g, 0),
-            DAL = if_else(tm == "DAL", g, 0),
-            HOU = if_else(tm == "HOU", g, 0),
-            TOR = if_else(tm == "TOR", g, 0),
-            WAS = if_else(tm == "WAS", g, 0),
-            ORL = if_else(tm == "ORL", g, 0),
-            CHO = if_else(tm == "CHO", g, 0),
-            SAC = if_else(tm == "SAC", g, 0),
-            LAL = if_else(tm == "LAL", g, 0),
-            MIN = if_else(tm == "MIN", g, 0),
-            BOS = if_else(tm == "BOS", g, 0),
-            GSW = if_else(tm == "GSW", g, 0),
-            NOP = if_else(tm == "NOP", g, 0),
-            LAC = if_else(tm == "LAC", g, 0),
-            PHI = if_else(tm == "PHI", g, 0),
-            DET = if_else(tm == "DET", g, 0)) 
-team_game[team_game$player_name == "Alec Burks",]
-team_names <- c("OKC", "PHO", "ATL", "MIA", "CLE", 
-                "DEN", "SAS", "CHI", "UTA", "BRK", 
-                "NYK", "POR", "MEM", "TOT", "IND", 
-                "MIL", "DAL", "HOU", "TOR", "WAS", 
-                "ORL", "CHO", "SAC", "LAL", "MIN", 
-                "BOS", "GSW", "NOP", "LAC", "PHI", "DET")
-team_game <- team_game %>% 
-  group_by(player_name) %>%
-  summarize_at(team_names, sum) %>%
-  ungroup()
-team <- team_game %>% 
-  select(team_names) %>% 
-  apply(., 1, which.max)
-player_tm <- tibble(player_name = team_game$player_name, Tm = team_names[team]) 
-player_stats <- player_stats %>%
-  select(!tm) %>% 
-  right_join(player_tm, by = "player_name") 
-player_stats[player_stats$player_name == "Alec Burks",c("player_name", "Tm")]
-
-# group by player names then sum so each player has one row in the final database
-player_stats <- player_stats %>% 
-  group_by(player_name) %>% 
-  mutate(across(c("g":"pts"), sum)) %>% 
-  distinct()
-
-# find the rows that contain NA values
-# all values seem to come from the FG, 2P, 3P and eFG percentages due to teh player not attempting that shot type
-## or there are shot attempts but not calcualtion provided
-player_stats[!complete.cases(player_stats),]
-
-# Recalcaulte all the shot percentages to fill those that have attempts bu NA value
-player_stats <- player_stats %>% 
-  mutate(x3p_percent = x3p/x3pa,
-         x2p_percent = x2p/x2pa,
-         ft_percent = ft/fta,
-         fg_percent = fg/fga,
-         e_fg_percent = (fg + 0.5 * x3p)/ fga)
-
-# if the player has no attmpt imput the % for that shot type as 0
-player_stats <- player_stats %>% 
-  mutate(x3p_percent = if_else(x3pa == 0 , 0, x3p_percent),
-         x2p_percent = if_else(x2pa == 0 , 0, x2p_percent),
-         ft_percent = if_else(fta == 0 , 0, ft_percent),
-         fg_percent = if_else(fga == 0 , 0, fg_percent),
-         e_fg_percent = if_else(fga == 0 & x3pa == 0, 0, e_fg_percent)) 
-
-# check for an NA values
-player_stats[!complete.cases(player_stats),]
-
-write_csv(player_stats, "data/processed/cleaned_player-stats.csv")
+# Running the cleaning scripts from the funs folder to seperate the cleaninig and model analysis
+source("funs/clean_player-stats.R")
 ```
 
 ```{r Team stats}
-# read in,  remove NA cols and clean col names
-team_stats1 <- read_csv("data/raw/2018-19_nba_team-statistics_1.csv")
-team_stats1$X23 <- NULL
-team_stats1$X24 <- NULL
-team_stats1$X25 <- NULL
-team_stats1 <- clean_names(team_stats1) 
-# extract the varables that are not team based and can be calculated on an individual player basis
-team_stats1 <- team_stats1 %>% 
-  select(team, f_tr, x3p_ar, ts_percent, e_fg_percent, ft_fga)
-
-# read in and clean names
-team_stats2 <- read_csv("data/raw/2018-19_nba_team-statistics_2.csv")
-team_stats2 <- clean_names(team_stats2) 
-
-# join the two team stats together
-team_stats <- left_join(team_stats1, team_stats2, by = "team")
-team_stats[!complete.cases(team_stats),]
-team_stats <- clean_names(team_stats)
-
-# read in payroll
-team_payroll <- read_csv("data/raw/2019-20_nba_team-payroll.csv")
-# remove non numeric characters and convert to numeric
-team_payroll$salary <- gsub(",", "", team_payroll$salary)
-team_payroll$salary <- gsub("\\$", "", team_payroll$salary)
-team_payroll$salary <- as.numeric(team_payroll$salary)
-
-# read in additional data that contains the team names from the payroll and team stats
-team_names <- read_csv("data/raw/team-salary-name_team-stats-name.csv")
-
-# match the team stats name to the payroll name and drop the payroll name
-team_payroll <- team_payroll %>% 
-  right_join(team_names, by = "team") %>% 
-  select(-team) %>% 
-  rename(team = team_stats_name)
-
-# join the payroll to the team_stats master data
-team_stats <- left_join(team_stats, team_payroll, by = "team")
-
-#write out to the processed folder
-write_csv(team_stats, "data/processed/cleaned_team-stats.csv")
+# Running the cleaning scripts from the funs folder to seperate the cleaninig and model analysis
+source("funs/clean_team-stats.R")
 ```
+
 Exploratory analysis
 This section should document your exploratory data analysis and may include but is not limited to:
 - checking for errors and missing values within the datasets
@@ -213,6 +42,12 @@ Note that this section and the data cleaning section may be an iterative process
 ```{r}
 tm_stats <- read_csv("data/processed/cleaned_team-stats.csv")
 sum(is.na(tm_stats))
+
+ggplot(tm_stats, aes(w, pts)) +
+  geom_point() + 
+  geom_smooth(method = "lm", se = F, linetype = "dashed", colour = "red")
+
+cor(tm_stats$w, tm_stats$pts)
 
 # convert stats to per game
 tm_stats <- tm_stats %>% 
@@ -240,8 +75,10 @@ tm_stats <- tm_stats %>%
             pts = pts/g)
 
 # variables removed as they will not add to predicting points scored
+team <- tm_stats$team
+
 tm_stats <- tm_stats %>% 
-  select(!c(g, rk, team, team_id, salary))
+  select(!c(g, rk,team, team_id, salary, w))
 
   
 ggplot(tm_stats, aes(pts)) +
@@ -256,6 +93,7 @@ numeric_vars <- tm_stats %>%
 for (i in seq_along(numeric_vars)) {
   print(gg_scatter(tm_stats, numeric_vars[i]))
 }
+
 tm_stats %>% 
   select(is.numeric) %>% 
   corrr::correlate() %>% 
@@ -273,7 +111,14 @@ GGally::ggcorr(tm_stats, method = c('pairwise','spearman'),
 tm_stats <- tm_stats %>% 
   select(!c(e_fg_percent, ft_fga, fg, x3p, x3p_ar, ft, fta, drb, fg_percent, x2p_percent, x3p_percent))
 
-  
+# removed as it shows low linear relationship in the car::avPlots(fit)
+tm_stats <- tm_stats %>% 
+  select(!blk)
+
+# Removes as the confint for the slope was -1.043498e-03	4.461750e-02 
+tm_stats <- tm_stats %>% 
+  select(!c(x3pa, x2p, trb, ast))
+
 ```
 Data modelling and results
 This section may include but is not limited to:
@@ -285,11 +130,16 @@ This section may include but is not limited to:
 fit <- lm(pts ~ ., tm_stats)
 tidy(fit, conf.int = T)
 summary(fit)
+```
 
+
+```{r}
 # Linearity
 car::avPlots(fit)
+```
 
-# multicolinety
+```{r}
+# multicolinearty
 cor_mat <- tm_stats %>% 
   select(where(is.numeric)) %>% 
   cor(., method = 'spearman')
@@ -300,11 +150,82 @@ cor_features <- caret::findCorrelation(cor_mat, cutoff = 0.8, names = T, exact =
 # Variance Inflation Factor
 car::vif(fit)
 sqrt(car::vif(fit))
-
-fit <- lm(pts ~ ., tm_stats)
-tidy(fit, conf.int = T)
-summary(fit)
 ```
+
+```{r}
+#outliers
+std_res <- rstandard(fit)
+points <- 1:length(std_res)
+ggplot(NULL, aes(points, std_res)) +
+  geom_point() +
+  ylim(c(-4,4)) +
+  geom_hline(yintercept = c(-3,3) , colour = "red", linetype = "dashed")
+
+# no obvious outliers
+```
+
+```{r}
+# Leverage points
+tmpdf <- tm_stats 
+tmpdf$hats <- hatvalues(fit)
+lev_labels <- if_else(tmpdf$hats >= 0.4, paste(team), "")
+
+ggplot(tmpdf, aes(points, hats)) +
+  geom_point() +
+  ggrepel::geom_text_repel(aes(label = lev_labels), colour = "navy")
+
+```
+
+```{r}
+# Influence
+cook <- cooks.distance(fit)
+cook_labels <- if_else(cook >= 1, paste(team), "")
+
+ggplot(NULL, aes(points, cook)) +
+  geom_point() +
+  ggrepel::geom_text_repel(aes(label = cook_labels), colour = "navy")
+
+
+```
+
+```{r}
+# Independence
+car::durbinWatsonTest(fit)
+# can range from 0 - 4
+# 2 means observations are independent
+
+```
+
+```{r}
+# Homoscedasticity
+res <- residuals(fit)
+fitted <- predict(fit)
+res_labels <- if_else(res >= .1 | res <= -.12, paste(team), "")
+
+
+ggplot(NULL, aes(fitted, res)) +
+  geom_point() +
+  geom_hline(yintercept = 0, color = "red", linetype = "dashed") +
+  ggrepel::geom_text_repel(aes(label = res_labels), colour = "navy")
+
+# ideally a random spread with no clear pattern
+
+
+```
+
+```{r}
+# Normality of residuals
+
+ggplot(NULL, aes(res)) +
+  geom_histogram(binwidth = .07)
+
+ggplot(NULL, aes(sample =res)) +
+  stat_qq() +
+  stat_qq_line()
+
+```
+
+
 Player recommendations
 This section will be the key part that is presented to the general manager. Here you should present your recommendations for the best five starting players, but also think about what other important information they would want to know, and how it is best to present that information to them. 
 ```{r}
@@ -339,14 +260,14 @@ player_stats <-  player_stats %>%
 
 player_salary <- read_csv("data/raw/2018-19_nba_player-salaries.csv")
 
-player_stats <- left_join(player_stats, player_salary)
+player_stats <- left_join(player_stats, player_salary, by= "player_name")
 
 players <- mutate(players, exp_pts = predict(fit, newdata = players))
 
 players <- players %>% 
   select(player_name, exp_pts)
 
-player_stats <- left_join(player_stats, players)
+player_stats <- left_join(player_stats, players, by = "player_name")
 
 player_stats %>% 
   select(player_name, age, mp, Pos, salary, exp_pts) %>% 
@@ -366,11 +287,5 @@ Provide a brief summary which describes the key points and findings from your pr
 ```
 Reference List
 Provide a reference list of any sources you used in the development of your report and justification of your arguments. Please use the Vancouver reference style (Links to an external site.) for the reference list and in-text references. 
-```{r}
-r_hat <- predict(fit)
-
-ggplot(NULL, aes(tm_stats$pts, r_hat)) +
-  geom_point()
-```
 
  
